updated requirements.txt and app.py

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit>=1.22.0
 pandas==2.0.2
-plotly==5.15.0
+plotly==5.15.0  # Force reinstall
 requests==2.31.0
 matplotlib==3.7.1
 wordcloud==1.9.2
