Update wordcloud to 1.9.3 for Python 3.12 compatibility

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 streamlit>=1.22.0
 pandas==2.0.2
-plotly==5.15.0  # Ensure plotly installation
+plotly==5.15.0
 requests==2.31.0
 matplotlib==3.7.1
-wordcloud==1.9.2
+wordcloud==1.9.3  # Updated to fix Python 3.12 compatibility
 tweepy==4.14.0
-python-dotenv==1.0.0  # Ensure dotenv installation
+python-dotenv==1.0.0
